# ZK_Guard

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/zkguard-cli/: Cargo.toml
crates/zkguard-cli/src/: cli.rs  exit_code.rs  main.rs
crates/zkguard-cli/src/commands/: fixtures.rs  mod.rs  rules.rs  scan.rs
crates/zkguard-cli/tests/: cli.rs
crates/zkguard-config/: Cargo.toml
crates/zkguard-config/src/: lib.rs  tests.rs
crates/zkguard-core/: Cargo.toml
crates/zkguard-core/src/: confidence.rs  finding.rs  lib.rs  placeholder.rs  rule.rs  scan.rs  severity.rs  skipped.rs  suppression.rs
crates/zkguard-fuzz/: Cargo.toml
crates/zkguard-fuzz/src/: generators.rs  lib.rs  placeholder.rs
crates/zkguard-fuzz/tests/: property_determinism.rs  property_directional.rs  property_line_endings.rs  property_no_panic.rs  property_well_formed.rs
crates/zkguard-noir/: Cargo.toml
crates/zkguard-noir/src/: discovery.rs  heuristics.rs  lib.rs  placeholder.rs
crates/zkguard-report/: Cargo.toml
crates/zkguard-report/src/: human.rs  json.rs  lib.rs  markdown.rs  placeholder.rs  sarif.rs
crates/zkguard-report/tests/: sarif_golden.rs
crates/zkguard-report/tests/golden/: noir_public_001.sarif
crates/zkguard-rules/: Cargo.toml
crates/zkguard-rules/src/: lib.rs  noir_constraint_001.rs  noir_public_001.rs  noir_range_001.rs  placeholder.rs  registry.rs  zk_hash_001.rs  zk_nullifier_001.rs  zk_test_001.rs
crates/zkguard-rules/tests/: noir_constraint_001_fixtures.rs  noir_public_001_fixture_matrix.rs  noir_public_001_fixtures.rs  noir_range_001_fixtures.rs  zk_hash_001_fixtures.rs  zk_nullifier_001_fixtures.rs  zk_test_001_fixtures.rs
docs/: agent-workflow.md  architecture.md  configuration.md  roadmap.md  rule-taxonomy.md  sarif.md  security-review.md
examples/github-actions/: zkguard-sarif.yml
fixtures/noir/safe/noir-constraint-001/: Nargo.toml
fixtures/noir/safe/noir-constraint-001-inline-no-binding/: Nargo.toml
fixtures/noir/safe/noir-constraint-001-inline-no-binding/src/: main.nr
fixtures/noir/safe/noir-constraint-001/src/: main.nr
fixtures/noir/safe/noir-public-001/: Nargo.toml
fixtures/noir/safe/noir-public-001-multiline-signature/: Nargo.toml
fixtures/noir/safe/noir-public-001-multiline-signature/src/: main.nr
fixtures/noir/safe/noir-public-001-no-public-params/: Nargo.toml
fixtures/noir/safe/noir-public-001-no-public-params/src/: main.nr
fixtures/noir/safe/noir-public-001-one-hop-indirection/: Nargo.toml
fixtures/noir/safe/noir-public-001-one-hop-indirection/src/: main.nr
fixtures/noir/safe/noir-public-001-rhs-of-assert-eq/: Nargo.toml
fixtures/noir/safe/noir-public-001/src/: main.nr
fixtures/noir/safe/noir-range-001-cast/: Nargo.toml
fixtures/noir/safe/noir-range-001-index/: Nargo.toml
fixtures/noir/safe/noir-range-001-loop-counter/: Nargo.toml
fixtures/noir/safe/zk-hash-001/: Nargo.toml
fixtures/noir/safe/zk-nullifier-001/: Nargo.toml
fixtures/noir/safe/zk-test-001/: Nargo.toml
fixtures/noir/vulnerable/noir-constraint-001/: Nargo.toml
fixtures/noir/vulnerable/noir-public-001/: Nargo.toml
fixtures/noir/vulnerable/noir-public-001-comment-blindness-fn/: Nargo.toml
fixtures/noir/vulnerable/noir-public-001-cross-function-fp/: Nargo.toml
fixtures/noir/vulnerable/noir-public-001-custom-wrapper-fp/: Nargo.toml
fixtures/noir/vulnerable/noir-public-001-multi-param/: Nargo.toml
fixtures/noir/vulnerable/noir-range-001-cast/: Nargo.toml
fixtures/noir/vulnerable/noir-range-001-index/: Nargo.toml
fixtures/noir/vulnerable/zk-hash-001/: Nargo.toml
fixtures/noir/vulnerable/zk-nullifier-001-unhashed/: Nargo.toml
fixtures/noir/vulnerable/zk-nullifier-001-untagged-hash/: Nargo.toml
fixtures/noir/vulnerable/zk-test-001-no-negative/: Nargo.toml
fixtures/noir/vulnerable/zk-test-001-no-tests/: Nargo.toml
(+20 files in other folders)
