[workspace]
resolver = "2"
members = [
    "crates/zkguard-cli",
    "crates/zkguard-core",
    "crates/zkguard-noir",
    "crates/zkguard-rules",
    "crates/zkguard-fuzz",
    "crates/zkguard-report",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ThirdChildren/ZK_Guard"
rust-version = "1.75"

# Shared dependency versions. Crates pull these in via
# `dep_name = { workspace = true }` so the whole workspace stays on one
# version. Keep this list minimal — add entries only when a crate actually
# needs them (per CLAUDE.md: avoid premature complexity).
[workspace.dependencies]
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1" }
clap = { version = "4", features = ["derive"] }

# Workspace-wide lint defaults. Individual crates inherit these via
# `[lints] workspace = true`. Kept intentionally small at this stage;
# tighten as the codebase grows (see docs/roadmap.md).
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
